--- a/static/main.css
+++ b/static/main.css
@@ -61,6 +61,7 @@ table {
   width: 100%;
   color: white;
   font-family: Oswald;
+  font-size: x-large;
   text-transform: uppercase;
 }
 
@@ -74,7 +75,7 @@ table {
   margin-left: 0;
 }
 
-.left--opened {
+.home--opened > .left {
   width: 6rem;
 }
 
@@ -88,7 +89,7 @@ table {
   margin-left: 0;
 }
 
-.right--opened {
+.home--opened > .right {
   margin-left: calc(100% - 12rem);
   width: 6rem;
 }
@@ -105,11 +106,11 @@ table {
   height: 100vh;
 }
 
-.left--opened > .title {
+.home--opened > .left > .title {
   width: 3rem;
 }
 
-.right--opened > .title {
+.home--opened > .right > .title {
   width: 3rem;
 }
 
@@ -117,7 +118,7 @@ table {
   margin-right: .5rem;
 }
 
-.left--opened > .title > .text {
+.home--opened > .left > .title > .text {
   transform: rotate(-90deg);
   margin-right: 0;
   top: 90vh;
@@ -131,7 +132,7 @@ table {
   white-space: nowrap;
 }
 
-.right--opened > .title > .text {
+.home--opened > .right > .title > .text {
   transform: rotate(-90deg);
   margin: 0;
   top: 90vh;
@@ -149,12 +150,12 @@ table {
   right: 0;
 }
 
-.left--opened > .subtitle {
+.home--opened > .left > .subtitle {
   width: 3rem;
   top: 0;
 }
 
-.right--opened > .subtitle {
+.home--opened > .right > .subtitle {
   width: 3rem;
   top:0;
 }
@@ -174,4 +175,15 @@ table {
 
 .home--model > .right {
   margin-left: 0;
+}
+
+.main-subtitle {
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  width: 300px;
+  bottom: 3rem;
+  font-size: large;
 }
