Add: Main subtitle.

--- a/static/main.css
+++ b/static/main.css
@@ -186,4 +186,14 @@ table {
   width: 300px;
   bottom: 3rem;
   font-size: large;
+  transition: all .3s ease;
+}
+
+.home--opened > .main-subtitle {
+  color: black;
+}
+
+.home--villa > .main-subtitle,
+.home--villa > .main-subtitle {
+  bottom: -3rem;
 }
