Del: Unused tools.

--- a/static/main.css
+++ b/static/main.css
@@ -194,6 +194,6 @@ table {
 }
 
 .home--villa > .main-subtitle,
-.home--villa > .main-subtitle {
+.home--model > .main-subtitle {
   bottom: -3rem;
 }
