--- a/static/main.css
+++ b/static/main.css
@@ -48,10 +48,15 @@ table {
 }
 
 @font-face {
-  font-family: Oswald;
-  src: local("Helvetica Neue Bold"),
-       local("HelveticaNeue-Bold"),
-       url(./Oswald-Regular.ttf);
+    font-family: 'oswald_regularregular';
+    src: url('oswald-regular-webfont.eot');
+    src: url('oswald-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('oswald-regular-webfont.woff2') format('woff2'),
+         url('oswald-regular-webfont.woff') format('woff'),
+         url('oswald-regular-webfont.ttf') format('truetype'),
+         url('oswald-regular-webfont.svg#oswald_regularregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
 
 .home {
