Mod: Font-fix ?

--- a/static/main.css
+++ b/static/main.css
@@ -65,7 +65,7 @@ table {
   height: 100vh;
   width: 100%;
   color: white;
-  font-family: Oswald;
+  font-family: oswald_regularregular;
   font-size: x-large;
   text-transform: uppercase;
 }
