--- a/static/main.css
+++ b/static/main.css
@@ -68,6 +68,7 @@ table {
   font-family: oswald_regularregular;
   font-size: x-large;
   text-transform: uppercase;
+  background-color: #EBEBEB;
 }
 
 .left {
